--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="img/portfolio/EstatutoCAEComp.pdf" class="portfolio-link" data-toggle="modal">
+                    <a href="img/portfolio/EstatutoCAEComp.pdf" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
@@ -474,27 +474,27 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
+                    <a href="https://www.ufrn.br/" target="_blank">
                         <img src="img/logos/Logo_ufrn.jpg" class="img-responsive img-centered" alt="logo-ufrn">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
+                    <a href="#https://www.ct.ufrn.br/" target="_blank" >
                         <img src="img/logos/Logo_CT.jpg" class="img-responsive img-centered" alt="logo-ct">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/Logo_DCA.jpg "class="img-responsive img-centered" alt="logo-dca">
+                    <a href="https://www.dca.ufrn.br/" target="_blank">
+                        <img src="img/logos/Logo_DCA.jpg " class="img-responsive img-centered" alt="logo-dca">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
+                    <a href="#https://www.instagram.com/nova.alianca.409/" target="_blank">
                         <img src="img/logos/Logo_otica.jpg " class="img-responsive img-centered" alt="logo-oticanovaalianca">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
+                    <a href="https://www.instagram.com/medeirosecostaconfeccao/" target="_blank">
                         <img src="img/logos/Logo_MCjpg.jpg" class="img-responsive img-centered" alt="logo-camisasmedeiros">
                     </a>
                 </div>
@@ -509,9 +509,9 @@
                     <h2 class="section-heading">Localização</h2>
                     <br>
                     <br>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d417.20001691289235!2d-35.19986605588028!3d-5.8418343578847205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7b2ffb91d869d4d%3A0xd44d50345401757c!2sCAeCOMP%20-%20Centro%20Academico%20de%20Engenharia%20da%20Computa%C3%A7%C3%A3o!5e0!3m2!1spt-BR!2sbr!4v1727466358037!5m2!1spt-BR!2sbr" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d417.20001691289235!2d-35.19986605588028!3d-5.8418343578847205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7b2ffb91d869d4d%3A0xd44d50345401757c!2sCAeCOMP%20-%20Centro%20Academico%20de%20Engenharia%20da%20Computa%C3%A7%C3%A3o!5e0!3m2!1spt-BR!2sbr!4v1727466358037!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-                    <h4 style="color: white; font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif" class="section-subheading text-muted"><br>Entre o setor 3 e o setor 4. <br> Próximo à OCA. <br> Confira os horários de atendimento <a href="https://docs.google.com/spreadsheets/d/1iRfv5_h7QSyL_JF1ibJEgs4O8p4WQ85Ytp7ofryJkYg/edit?usp=sharing" target="b">aqui</a> <br> Qualquer dúvida: caengcompufrn@gmail.com <br></h4>
+                    <h4 style="color: black; width: 550px; background-color: whitesmoke; class="section-subheading text-muted" ><br> Entre o setor 3 e o setor 4. <br> Próximo à OCA. <br> Confira os horários de atendimento <a href="https://docs.google.com/spreadsheets/d/1iRfv5_h7QSyL_JF1ibJEgs4O8p4WQ85Ytp7ofryJkYg/edit?usp=sharing" target="b">aqui</a> <br> Qualquer dúvida: caengcompufrn@gmail.com <br></h4>
                 </div>
             </div>
             
@@ -526,7 +526,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">CAEComp - UFRN © 2024.</span>
+                    <span class="copyright">CAEComp - UFRN © 
+                        <br>Gestão Frances Allen 2024.
+                        caengcompufrn@gmail.com
+                    </span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
@@ -540,8 +543,10 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li>Todos os direitos reservados.
-                        </li>
+                        <li>Site desenvolvido por</li> <li>Marcelo Melo</li> 
+                        <li>Ramylla Barbalho</li>
+                        <li> Arthur Queiroz</li> <li>Emelyn Freire</li>
+                        <li>Ariadne da Silva</li> <li>Maria Clara Freitas</li>
                     </ul>
                 </div>
             </div>
