feat(front):mudanca localizacao e footer

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#https://www.ct.ufrn.br/" target="_blank" >
+                    <a href="https://www.ct.ufrn.br/" target="_blank" >
                         <img src="img/logos/Logo_CT.jpg" class="img-responsive img-centered" alt="logo-ct">
                     </a>
                 </div>
@@ -489,7 +489,7 @@
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#https://www.instagram.com/nova.alianca.409/" target="_blank">
+                    <a href="https://www.instagram.com/nova.alianca.409/" target="_blank">
                         <img src="img/logos/Logo_otica.jpg " class="img-responsive img-centered" alt="logo-oticanovaalianca">
                     </a>
                 </div>
